# OpenHippo

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
docs/: F5_DREAM.md  PRD.md  PROGRESS.md
src/openhippo/: __init__.py  cli.py
src/openhippo/api/: __init__.py  auth.py  mcp_server.py  rest.py
src/openhippo/core/: __init__.py  config.py  dream.py  embed_queue.py  embedding.py  engine.py  export.py  importer.py  migrations_runner.py  storage.py
src/openhippo/core/migrations/: 003_multitenancy_columns.sql  004_content_hash_column.sql  005_backfill_content_hash.py  006_dream_runs.sql  007_dream_columns.sql  008_dream_actions.sql  009_perf_indexes.sql  010_embedding_jobs.sql  011_dormant_pipeline.sql  012_dream_action_enum.sql
src/openhippo/ui/: index.html
tests/: conftest.py  test_auth.py  test_dream.py  test_dream_consolidate.py  test_dream_metrics.py  test_dream_pr3.py  test_embed_queue.py  test_engine.py  test_export.py  test_f5_unified_soft_delete.py  test_placeholder.py  test_rest_api.py  test_roundtrip.py  test_ui_mount.py
