[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhippo"
version = "0.1.0"
description = "Local-first memory engine for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pei Wang", email = "wang.pei@live.com" },
]
keywords = ["ai", "agent", "memory", "mcp", "local-first"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.0",
    "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0",
    "einops",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
openhippo = "openhippo.cli:main"

[project.urls]
Homepage = "https://github.com/wpsl5168/OpenHippo"
Repository = "https://github.com/wpsl5168/OpenHippo"
Issues = "https://github.com/wpsl5168/OpenHippo/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true
